--- a/index.html
+++ b/index.html
@@ -3412,6 +3412,7 @@
               </div>
             </div>
           </div>
+          <!-- comment -->
           <button class="btn tool-btn"><i class="fas fa-search-plus"></i>ZOOM LEVEL</button>
           <button class="btn tool-btn"><i class="fas fa-reply"></i>BACK</button>
           <button class="btn tool-btn"><i class="fas fa-puzzle-piece"></i>VERTICAL LEVEL</button>
