style: tools UI

--- a/index.html
+++ b/index.html
@@ -3365,11 +3365,11 @@
                 <div class="accordion" id="accordionExample">
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                      <button class="accordion-button mcs-accordion-btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      <button class="accordion-button mcs-accordion-btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-new-100" aria-expanded="true" aria-controls="collapse-new-100">
                         Uva
                       </button>
                     </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div id="collapse-new-100" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                       <div class="accordion-body mcs-district-accordion-body">
                         <ul>
                           <li class="btn btn-district-btn w-100">Badulla <i class="fas fa-angle-right"></i></li>
@@ -3422,15 +3422,16 @@
                 <button class="btn layer-btn">OSM</button>              
                 <button class="btn layer-btn">BingMaps</button> 
               </div>
+              <hr>
               <div class="options-section">
                 <div class="accordion accordion-flush" id="accordionExample">
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-new-1" aria-expanded="false" aria-controls="collapse-new-1">
                         <h3 class="dashboard-h3">MC Areas</h3>
                       </button>
                     </h2>
-                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div id="collapse-new-1" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
                         <form action="">
                           <div class="licenses-fees">
@@ -3491,11 +3492,11 @@
                 <div class="accordion accordion-flush" id="accordionExample">
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-new-2" aria-expanded="false" aria-controls="collapse-new-2">
                         <h3 class="dashboard-h3">Land Use Information</h3>
                       </button>
                     </h2>
-                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div id="collapse-new-2" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
                         <form action="">
                           <div class="licenses-fees">
@@ -3556,11 +3557,11 @@
                 <div class="accordion accordion-flush" id="accordionExample">
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-new-3" aria-expanded="false" aria-controls="collapse-new-3">
                         <h3 class="dashboard-h3">Electricity Lines</h3>
                       </button>
                     </h2>
-                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div id="collapse-new-3" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                       <div class="accordion-body">
                         <form action="">
                           <div class="licenses-fees">
