--- a/index.html
+++ b/index.html
@@ -1633,10 +1633,10 @@
           <div class="export-section">
             <form action="">
               <div class="row form-row">
-                <div class="col-md-4 form-label-col form-col">
+                <div class="col-md-4 form-label-col form-col custom-col-4">
                   <h5 class="label">Select MCs</h5>
                 </div>
-                <div class="col-md-8 form-col">
+                <div class="col-md-8 form-col custom-col-8">
                   <select class="form-select form-input" multiple aria-label="Default select example">
                     <option selected>Select from list</option>
                     <option value="1">MC 1</option>
@@ -1661,10 +1661,10 @@
                 </div>
               </div>
               <div class="row form-row">
-                <div class="col-md-4 form-label-col form-col">
+                <div class="col-md-4 form-label-col form-col custom-col-4">
                   <h5 class="label">Select Layers</h5>
                 </div>
-                <div class="col-md-8 form-col">
+                <div class="col-md-8 form-col custom-col-8">
                   <select class="form-select form-input" aria-label="Default select example">
                     <option selected>Select from list</option>
                     <option value="1">Layer 1</option>
@@ -1674,10 +1674,10 @@
                 </div>
               </div>
               <div class="row form-row">
-                <div class="col-md-4 form-label-col form-col">
+                <div class="col-md-4 form-label-col form-col custom-col-4">
                   <h5 class="label">Export Format</h5>
                 </div>
-                <div class="col-md-8 form-col">
+                <div class="col-md-8 form-col custom-col-8">
                   <select class="form-select form-input" aria-label="Default select example">
                     <option selected>Select from list</option>
                     <option value="1">Format 1</option>
@@ -1695,38 +1695,28 @@
           <div class="import-section">
             <form action="">
               <div class="row form-row">
-                <div class="col-md-4 form-label-col form-col">
+                <div class="col-md-4 form-label-col form-col custom-col-4">
                   <h5 class="label">Select file to upload</h5>
                 </div>
-                <div class="col-md-8 form-col">
+                <div class="col-md-8 form-col custom-col-8">
                   <input type="file" class="form-control" id="inputGroupFile02">
                   <label class="input-group-text" for="inputGroupFile02">Upload</label>
                 </div>
               </div>
               <div class="row form-row">
-                <div class="col-md-4 form-label-col form-col">
-                  <h5 class="label">Select Layers</h5>
+                <div class="col-md-4 custom-col-4">
+                  <span class="attr">Feature Coordinate System</span>
                 </div>
-                <div class="col-md-8 form-col">
-                  <select class="form-select form-input" aria-label="Default select example">
-                    <option selected>Select from list</option>
-                    <option value="1">Layer 1</option>
-                    <option value="2">Layer 2</option>
-                    <option value="3">Layer 3</option>
-                  </select>
+                <div class="col-md-8 custom-col-8">
+                  <span class="val">15681351354684354354351</span>
                 </div>
               </div>
               <div class="row form-row">
-                <div class="col-md-4 form-label-col form-col">
-                  <h5 class="label">Import Format</h5>
+                <div class="col-md-4 custom-col-4">
+                  <span class="attr">Map Coordinate System</span>
                 </div>
-                <div class="col-md-8 form-col">
-                  <select class="form-select form-input" aria-label="Default select example">
-                    <option selected>Select from list</option>
-                    <option value="1">Format 1</option>
-                    <option value="2">Format 2</option>
-                    <option value="3">Format 3</option>
-                  </select>
+                <div class="col-md-8 custom-col-8">
+                  <span class="val">15681351354684354354351</span>
                 </div>
               </div>
               <button class="btn btn-save">Import</button>
